Add functionality for Epub download

--- a/springer_book.ipynb
+++ b/springer_book.ipynb
@@ -129,7 +129,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rint('Beginning file download with urllib2...')\n",
+    "\n",
+    "url = 'https://link.springer.com/download/epub/10.1007%2Fb97469.epub'\n",
+    "urllib.request.urlretrieve(url, '/home/pablo/Documents/springer_books/hola.epub')"
+   ]
   }
  ],
  "metadata": {
