Final version, including ebook download

--- a/springer_book.ipynb
+++ b/springer_book.ipynb
@@ -65,16 +65,11 @@
     "            try:\n",
     "                bookWebUrl = urllib.request.urlopen(link_book)\n",
     "\n",
-    "                if book_directory == self.pdf_directory:\n",
-    "                    file_extension = \"pdf\"\n",
-    "                    with open('{}/{}.{}'.format(book_directory, name, file_extension), 'wb') as file_name:\n",
-    "                        req = requests.get(bookWebUrl.url)\n",
-    "                        file_name.write(req.content)\n",
-    "                else:                                \n",
-    "                    file_extension = \"epub\"\n",
-    "                    with open('{}/{}.{}'.format(book_directory, name, file_extension), 'wb') as file_name:\n",
-    "                        req = requests.get(bookWebUrl.url)\n",
-    "                        file_name.write(req.content)\n",
+    "                file_extension = \"pdf\" if book_directory == self.pdf_directory else file_extension = \"epub\"\n",
+    "                \n",
+    "                with open('{}/{}.{}'.format(book_directory, name, file_extension), 'wb') as file_name:\n",
+    "                    req = requests.get(bookWebUrl.url)\n",
+    "                    file_name.write(req.content)\n",
     "\n",
     "            except Exception:\n",
     "                print(\"\\tNo se encuentra el documento {}\".format(name))\n",
